external-crates/move/crates/move-compiler/tests/move_2024/parser/complex_as.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04003]: built-in operation not supported
  ┌─ tests/move_2024/parser/complex_as.move:6:18
  │
6 │         let _x = x as Cup<u8>;
  │                  ^    ------- Found: '0x42::m::Cup<u8>'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
  │                  │     
  │                  Invalid argument to 'as'
